--- a/asynchronous.html
+++ b/asynchronous.html
@@ -9,6 +9,40 @@
 <body>
     <h1>Asynchronous JavaScript</h1>
     <script>
+        // const second = () => {
+        //     setTimeout(() => {
+        //         console.log('Async Hello there!')
+        //     }, 2000);
+        // }
+
+        // const first = () => {
+        //     console.log('Hello there!');
+        //     second();
+        //     console.log('The end!')
+        // }
+
+        // first();
+
+
+
+        function getRecipe() {
+            setTimeout(() => {
+                const recipeID = [234, 212, 322, 344];
+                console.log(recipeID);
+
+                setTimeout(id => {
+                    const recipe = {title: 'Fresh Tomato Pasta', publisher: 'Jonas'};
+                    console.log(`${id}: ${recipe.title}`);
+
+                    setTimeout(publisher => {
+                        const recipe = {title: 'Italian Pizza', publisher: 'Jonas'};
+                        console.log(recipe.title);
+                    }, 1500, recipe.publisher);
+                }, 1500, recipeID[2]);
+            }, 1500);
+
+        }
+        getRecipe();
         
     </script>
 </body>
