--- a/asynchronous.html
+++ b/asynchronous.html
@@ -25,24 +25,64 @@
 
 
 
-        function getRecipe() {
+        // function getRecipe() {
+        //     setTimeout(() => {
+        //         const recipeID = [234, 212, 322, 344];
+        //         console.log(recipeID);
+
+        //         setTimeout(id => {
+        //             const recipe = {title: 'Fresh Tomato Pasta', publisher: 'Jonas'};
+        //             console.log(`${id}: ${recipe.title}`);
+
+        //             setTimeout(publisher => {
+        //                 const recipe = {title: 'Italian Pizza', publisher: 'Jonas'};
+        //                 console.log(recipe.title);
+        //             }, 1500, recipe.publisher);
+        //         }, 1500, recipeID[2]);
+        //     }, 1500);
+
+        // }
+        // getRecipe();
+
+        const getIDs = new Promise((resolve, reject) => {
             setTimeout(() => {
-                const recipeID = [234, 212, 322, 344];
-                console.log(recipeID);
-
-                setTimeout(id => {
-                    const recipe = {title: 'Fresh Tomato Pasta', publisher: 'Jonas'};
-                    console.log(`${id}: ${recipe.title}`);
-
-                    setTimeout(publisher => {
-                        const recipe = {title: 'Italian Pizza', publisher: 'Jonas'};
-                        console.log(recipe.title);
-                    }, 1500, recipe.publisher);
-                }, 1500, recipeID[2]);
+                resolve([234, 212, 322, 344]);
             }, 1500);
+        });
 
-        }
-        getRecipe();
+        const getRecipe = recID => {
+            return new Promise((resolve, reject) => {
+                setTimeout(ID => {
+                    const recipe = {title: 'Fresh Tomato Pasta', publisher: 'Jonas'};
+                    resolve(`${ID}: ${recipe.title}`);
+                }, 1500, recID);
+            });
+        };
+
+        const getRelated = publisher => {
+            return new Promise((resolve, reject) => {
+                setTimeout(pub => {
+                    const recipe = {title: 'Italian Pizza', publisher: 'Jonas'};
+                    resolve(`${pub}: ${recipe.title}`);
+                    
+                }, 1500, publisher);
+            })
+        };
+
+        getIDs.then(IDs => {
+            console.log(IDs);
+            return getRecipe(IDs[2]);
+        })
+        .then(recipe => {
+            console.log(recipe);
+            return getRelated('Jonas')
+        })
+        .then(recipe => {
+            console.log(recipe);
+        })
+        .catch(error => {
+            console.log('Error!!');
+        });
         
     </script>
 </body>
